# PrimeIdeal

./: CMakeLists.txt  LICENSE  README.md  build_and_test.cmd
include/: definitions.h  output.h  pi_exports.h  test_utils.h  utilities.h
source/: output.c  test_utils.c
testing/: test_runner.c
